updated swagger defenition
