# internal/app/ocha/models/url_ddo.go
@@ -6,11 +6,11 @@ import (
 
 // Item - Entry struct for short url service
 type Item struct {
-	URL          string    `json:"url" example:"https://www.google.com"`
-	Key          string    `json:"shortcode" example:"google"`
-	StartDate    time.Time `json:"startDate"`
+	URL          string     `json:"url" example:"https://www.google.com"`
+	Key          string     `json:"shortcode" example:"google"`
+	StartDate    time.Time  `json:"startDate"`
 	LastSeenDate *time.Time `json:"lastSeenDate,omitempty"`
-	Counter      int       `json:"redirectCount"`
+	Counter      int        `json:"redirectCount"`
 }
 
 // CreateRequest - Create Short URL Request
@@ -23,4 +23,3 @@ type CreateRequest struct {
 type CreateResponse struct {
 	Key string `json:"shortcode" example:"google"`
 }
-
